# mpRPC

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
config/: mprpc.cnf
example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  user.pb.cc  user.pb.h
example/callee/: CMakeLists.txt  friend_service.cc  user_service.cc
example/caller/: CMakeLists.txt  call_friend_service.cc  call_user_service.cc
example/proto/: friend.proto  user.proto
include/: lock_queue.h  logger.h  mprpc_application.h  mprpc_channel.h  mprpc_config.h  mprpc_controller.h  mprpc_provider.h  rpcheader.pb.h  zk_client_util.h
proto/: rpcheader.proto
src/: CMakeLists.txt  logger.cc  mprpc_application.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_controller.cc  mprpc_provider.cc  rpcheader.pb.cc  zk_client_util.cc
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
